# cwipc_orbbec

./: CMakeLists.txt  README.md
apps/cwipc_orbbec_grab/: CMakeLists.txt  cwipc_orbbec_grab.cpp
apps/cwipc_orbbec_install_check/: CMakeLists.txt  cwipc_orbbec_install_check.cpp
apps/cwipc_orbbec_playback_grab/: CMakeLists.txt  cwipc_orbbec_playback_grab.cpp
include/cwipc_orbbec/: api.h
python/: CMakeLists.txt  pyproject.toml  test_cwipc_orbbec.py
python/_cwipc_orbbec/: __init__.py
src/: CMakeLists.txt  OrbbecBaseCamera.hpp  OrbbecBaseCapture.hpp  OrbbecCamera.cpp  OrbbecCamera.hpp  OrbbecCapture.cpp  OrbbecCapture.hpp  OrbbecConfig.cpp  OrbbecConfig.hpp  OrbbecPlaybackCamera.cpp  OrbbecPlaybackCamera.hpp  OrbbecPlaybackCapture.cpp  OrbbecPlaybackCapture.hpp  cwipc_orbbec.cpp  cwipc_pcl_additions.cpp
tests/: CMakeLists.txt
tests/fixtures/input/recording/: CL2A141002N.bag  cameraconfig.json
